feat: added all enpoints to trip api, added doc to every endpoint
