# api/controllers/TripController.js
@@ -1,19 +1,28 @@
+import mongoose from "mongoose";
 import Trip from "../models/TripModel.js";
 
-export function findById(req, res) {
-  Trip.findById(req.params._id, (err, order) => {
-    if (err) {
-      res.send(err);
+export async function findById(req, res) {
+  try {
+    const trip = await Trip.findById(req.params.id);
+    if (trip) {
+      res.send(trip);
     } else {
-      res.send(order);
+      res.status(404).send({
+        message: "Trip not found"
+      });
     }
-  });
+  } catch (err) {
+    res.status(500).send({
+      message: "Unexpected error",
+      err
+    });
+  }
 }
 
 export async function updateTrip(req, res) {
   try {
     const trip = await Trip.findOneAndUpdate(
-      { _id: req.params._id },
+      { _id: req.params.id },
       req.body,
       { new: true }
     );
@@ -30,24 +39,32 @@ export async function updateTrip(req, res) {
 export async function deleteTrip(req, res) {
   try {
     const deletionResponse = await Trip.deleteOne({
-      _id: req.params._id,
+      _id: req.params.id,
     });
     if (deletionResponse.deletedCount > 0) {
-      res.json({ message: "Trip successfully deleted" });
+      res.sendStatus(204);
     } else {
-      res.status(404).send("Trip could not be deleted");
+      res.status(404).send({
+        message: "Trip not found"
+      });
     }
   } catch (err) {
-    res.status(500).send(err);
+    res.status(500).send({
+      message: "Unexpected error",
+      err
+    });
   }
 }
 
-export async function getTrip(req, res) {
+export async function getTrips(req, res) {
   try {
     const trips = await Trip.find({});
     res.send(trips);
   } catch (err) {
-    res.status(500).send(err);
+    res.status(500).send({
+      message: "Unexpected error",
+      err
+    });
   }
 }
 
@@ -57,6 +74,266 @@ export async function addTrip(req, res) {
     const trip = await newTrip.save();
     res.send(trip);
   } catch (err) {
-    res.status(500).send(err);
+    res.status(500).send({
+      message: "Unexpected error",
+      err
+    });
   }
+}
+
+// Get all trips by manager_id
+export async function findTripsByManagerId(req, res) {
+  const { managerId } = req.params;
+  try {
+    const trips = await Trip.find({ manager_id: managerId });
+    res.send(trips);
+  } catch (err) {
+    res.status(500).send({
+      message: "Unexpected error",
+      err
+    });
+  }
+}
+
+// Update the status of a trip to "PUBLISHED"
+export async function publishTrip(req, res) {
+  try {
+    const trip = await Trip.findOneAndUpdate(
+      { _id: req.params.id },
+      {
+        status: "PUBLISHED"
+      },
+      { new: true }
+    );
+
+    if (trip) {
+      res.send(trip);
+    } else {
+      res.status(404).send({
+        message: "Trip not found",
+      });
+    }
+  } catch (err) {
+    res.status(500).send({
+      message: "Unexpected error",
+      err
+    });
+  }
+}
+
+// Update the status of a trip to "CANCELLED"
+export async function cancelTrip(req, res) {
+  try {
+    const trip = await Trip.findOneAndUpdate(
+      { _id: req.params.id },
+      {
+        status: "CANCELLED",
+        cancelationReason: req.body.cancelationReason
+      },
+      { new: true }
+    );
+
+    if (trip) {
+      res.send(trip);
+    } else {
+      res.status(404).send({
+        message: "Trip not found",
+      });
+    }
+  } catch (err) {
+    res.status(500).send({
+      message: "Unexpected error",
+      err
+    });
+  }
+}
+
+// Returns all the sponsorships of the sponsor passed by parameters
+export async function findSponsorshipsBySponsorId(req, res) {
+  try {
+    const sponsorshipList = await Trip.aggregate([
+      {
+        '$unwind': {
+          'path': '$sponsorships'
+        }
+      }, {
+        '$match': {
+          'sponsorships.sponsor_id': new mongoose.Types.ObjectId(req.params.id)
+        }
+      }, {
+        '$project': {
+          '_id': 0,
+          'sponsorship': '$sponsorships'
+        }
+      }
+    ]);
+
+    if (sponsorshipList.length === 0) {
+      res.status(404).send({
+        message: `Sponsor with id ${req.params.id} has no sponsorships`,
+      });
+    } else {
+      let sponsorshipsqs = [];
+      sponsorshipList.forEach(sponsorship => sponsorshipsqs.push(sponsorship.sponsorship))
+      res.send(sponsorshipsqs)
+    }
+  } catch (err) {
+    res.status(500).send({
+      message: "Unexpected error",
+      err
+    });
+  }
+}
+
+// Return the sponsorship passed by parameters
+export async function getTripSponsorshipById(req, res) {
+  try {
+    const sponsorship = await Trip.aggregate([
+      {
+        '$unwind': {
+          'path': '$sponsorships'
+        }
+      }, {
+        '$match': {
+          'sponsorships._id': new mongoose.Types.ObjectId(req.params.id)
+        }
+      }, {
+        '$project': {
+          'sponsorship': '$sponsorships',
+          '_id': 0
+        }
+      }
+    ]);
+
+    if (sponsorship[0].sponsorship) {
+      res.send(sponsorship[0].sponsorship)
+    } else {
+      res.status(404).send({
+        message: "Sponsorship not found",
+      });
+    }
+  } catch (err) {
+    res.status(500).send({
+      message: "Unexpected error",
+      err
+    });
+  }
+}
+
+// Add a sponsorship to a trip
+export async function addSponsorship(req, res) {
+  try {
+    const trip = await Trip.findOneAndUpdate(
+      {
+        _id: new mongoose.Types.ObjectId(req.params.id)
+      },
+      {
+        $push: {
+          "sponsorships": {
+            // "banner": req.body.banner,
+            "landingPage": req.body.landingPage,
+            "amount": req.body.amount,
+            "status": req.body.status,
+            "sponsor_id": req.body.sponsor_id
+          }
+        }
+      },
+      {
+        new: true
+      }
+    );
+
+    if (trip) {
+      res.send(trip);
+    } else {
+      res.status(404).send({
+        message: "Trip not found",
+      });
+    }
+  } catch (err) {
+    res.status(500).send({
+      message: "Unexpected error",
+      err
+    });
+  }
+}
+
+// Update a sponsorship from a trip
+export async function updateTripSponsorship(req, res) {
+  try {
+    // Get trip by id
+    const trip = await Trip.findById(req.params.tripId);
+    if (trip) {
+      // Get sponsorship by id
+      const sponsorship = trip.sponsorships.filter(sponsorship => sponsorship._id.equals(new mongoose.Types.ObjectId(req.params.sponsorshipId)))[0];
+      if (sponsorship) {
+        // Get index of sponsorship
+        const sponsorshipIndex = trip.sponsorships.indexOf(sponsorship)
+        // Update and save sponsorship
+        // sponsorship.banner = req.body.banner
+        sponsorship.landingPage = req.body.landingPage
+        trip.sponsorships[sponsorshipIndex] = sponsorship
+        trip.save()
+        res.send(trip);
+      } else {
+        res.status(404).send({
+          message: "Sponsorship not found",
+        });
+      }
+    } else {
+      res.status(404).send({
+        message: "Trip not found",
+      });
+    }
+  } catch (err) {
+    res.status(500).send({
+      message: "Unexpected error",
+      err
+    });
+  }
+}
+
+// Update status from a sponsorship
+export async function updateTripSponsorshipStatus(req, res) {
+  console.log('hola')
+  try {
+    // Get trip by id
+    const trip = await Trip.findById(req.params.tripId);
+    console.log(trip)
+    if (trip) {
+      // Get sponsorship by id
+      const sponsorship = trip.sponsorships.filter(sponsorship => sponsorship._id.equals(new mongoose.Types.ObjectId(req.params.sponsorshipId)))[0];
+      console.log(sponsorship)
+      if (sponsorship) {
+        // Get index of sponsorship
+        const sponsorshipIndex = trip.sponsorships.indexOf(sponsorship)
+        // Update and save sponsorship
+        sponsorship.status = req.body.status
+        trip.sponsorships[sponsorshipIndex] = sponsorship
+        trip.save()
+        res.send(trip);
+      } else {
+        res.status(404).send({
+          message: "Sponsorship not found",
+        });
+      }
+    } else {
+      res.status(404).send({
+        message: "Trip not found",
+      });
+    }
+  } catch (err) {
+    res.status(500).send({
+      message: "Unexpected error",
+      err
+    });
+  }
+}
+
+export async function payTrip(req, res) {
+  res.send("Pay trip endpoint");
+}
+
+export async function paySponsorship(req, res) {
+  res.send("Pay sponsorship endpoint");
 }
